--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -2,6 +2,18 @@
   padding: 0 2rem;
   height: calc(100vh - 6.5rem);
   overflow-y: scroll;
+  &::-webkit-scrollbar {
+    width: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 0.5rem;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--purple-800);
+    border-radius: 0.5rem;
+  }
 
   h2 {
     margin-top: 3rem;
