--- a/src/components/Player/stylesEspecialPlayer.module.scss
+++ b/src/components/Player/stylesEspecialPlayer.module.scss
@@ -1,5 +1,6 @@
 .stretchedPlayerContainer {
-  width: 25.4rem;
+  padding: 1rem 2rem;
+  width: 25vw;
   justify-content: space-between;
 
   transition: 0.5s;
@@ -18,27 +19,26 @@
 }
 
 .stretchedCurrentPlayer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   text-align: center;
+  margin-top: 0.8rem;
+  margin-bottom: 0.8rem;
 
   img {
     border-radius: 1.5rem;
-    height: 20rem;
-    padding: 4rem;
-    width: 100%;
+    height: 18rem;
+    width: 15rem;
   }
 
-  strong {
-    display: block;
-    margin-top: 2rem;
-    font: 600 1.25rem Lexend, sans-serif;
-    line-height: 1.75rem;
+  p {
+    font: 600 1rem Lexend, sans-serif;
   }
 
-  span {
-    display: block;
-    margin-top: 1rem;
+  p + p {
+    font: 0.9rem Lexend, sans-serif;
     opacity: 0.6;
-    line-height: 1.5rem;
   }
 }
 
@@ -46,6 +46,7 @@
 /* Compressend Player */
 .compressedPlayerContainer {
   width: 4rem; //*
+  padding: 3rem 4rem;
   justify-content: space-around; //*
 
   transition: 0.5s;
@@ -64,6 +65,32 @@
     font-size: 0.5rem; //*
   } //*
 }
+
+.comporessedCurrentPlayer {
+  text-align: center;
+  margin-top: 0.9rem;
+  margin-bottom: 0.9rem;
+
+  img {
+    border-radius: 1.5rem;
+    height: 5rem;
+    width: 5rem;
+  }
+
+  p {
+    margin-top: 0;
+    font: 600 0.8rem Lexend, sans-serif;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 7rem;
+  }
+
+  p + p {
+    opacity: 0.6;
+  }
+}
+
 
 .compressedProgress {
   flex-direction: column; //*
